--- a/style.css
+++ b/style.css
@@ -370,6 +370,20 @@
   color: white;
   position: relative;
 }
+#hero1{
+  height: 90vh;
+  background: url('https://th.bing.com/th/id/OIP.wrIMCKgy0UYK49JT1XBh9AHaEM?rs=1&pid=ImgDetMain') no-repeat 90% center; 
+  background-size: cover;
+  height: 100vh;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  position: relative;
+
+}
 
 /*#service {
   background: url('https://th.bing.com/th/id/R.107b468fb977e0d5e6b04bd2cd9fa8f1?rik=D8g7P1h2mjAf%2fw&pid=ImgRaw&r=0') no-repeat center center;
@@ -500,3 +514,43 @@
       display: none;
   }
 }
+
+.green{
+  color: var(--secondary-color);
+}
+
+#hero1 {
+  height: 100vh;
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+  position: relative;
+}
+
+#hero1 .container {
+  z-index: 1;
+}
+
+#hero1:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Adds a dark overlay to improve text readability */
+  z-index: 0;
+}
+
+#hero1 h1 {
+  font-size: 3em;
+  margin-bottom: 20px;
+}
+
+#PAYE h1{
+  color: var(--primary-color)
+}
+
+#PAYE h3{
+  color: var(--secondary-color);
+}
+
